# sps02_fastapi_mock

./: .gitignore  README.md  pyproject.toml
DT/BDD/: sps02_fastapi_mock.sql
DT/CSV_EXAMPLE/: Finiquito electrónico.csv  Libro de Remuneraciones Electrónico 1.csv  Libro de Remuneraciones Electrónico 2.csv  Registro de Contrato de Trabajo.csv
app/: main.py
app/routers/: ipsobtenerresolucionAF.py  ipsproximaFechaPagoBeneficios.py  spensionesConsultaCotizaciones.py  susesoSIAGFConsultaCausanteSimple.py  susesoconsultaAfiliacionCaja.py  susesoconsultaAfiliacionMutual.py
app/services/: sleep.py
